--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@astrojs/svelte": "^7.0.2",
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/svelte": "^7.0.4",
     "@astrojs/vercel": "^8.0.1",
     "@nanostores/persistent": "^0.10.2",
     "@shopify/hydrogen-react": "^2024.10.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "astro": "^5.1.1",
+    "@tailwindcss/vite": "^4.0.8",
+    "astro": "^5.3.0",
     "nanostores": "^0.11.3",
-    "svelte": "^5.15.0",
+    "svelte": "^5.20.2",
+    "tailwindcss": "^4.0.8",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -28,7 +29,6 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
 }
