--- a/package.json
+++ b/package.json
@@ -12,16 +12,27 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.1",
     "@astrojs/svelte": "^7.0.4",
     "@astrojs/vercel": "^8.0.1",
     "@nanostores/persistent": "^0.10.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@shopify/hydrogen-react": "^2024.10.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/vite": "^4.0.8",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "astro": "^5.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.482.0",
     "nanostores": "^0.11.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "svelte": "^5.20.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
