--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@astrojs/svelte": "^7.0.4",
     "@astrojs/vercel": "^8.0.1",
     "@nanostores/persistent": "^0.10.2",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@shopify/hydrogen-react": "^2024.10.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -25,6 +28,7 @@
     "astro": "^5.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "lucide-react": "^0.482.0",
     "nanostores": "^0.11.3",
     "react": "^19.0.0",
