--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/minimal",
+  "name": "@twsh/shop",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -20,7 +20,7 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@shopify/hydrogen-react": "^2024.10.1",
+    "@shopify/hydrogen-react": "^2025.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/vite": "^4.0.8",
     "@types/react": "^19.0.10",
@@ -28,7 +28,7 @@
     "astro": "^5.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "1.1.1",
     "lucide-react": "^0.482.0",
     "nanostores": "^0.11.3",
     "react": "^19.0.0",
