--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nanostores/persistent": "^0.10.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@shopify/hydrogen-react": "^2025.1.3",
