--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.1",
     "@astrojs/react": "^4.2.7",
-    "@astrojs/svelte": "^7.0.4",
-    "@astrojs/vercel": "^8.0.1",
+    "@astrojs/svelte": "^7.0.13",
     "@nanostores/persistent": "^0.10.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
@@ -27,7 +27,7 @@
     "@tanstack/react-query": "^5.75.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "astro": "^5.3.0",
+    "astro": "^5.7.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
