--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "lucide-react": "^0.482.0",
+    "lz-string": "^1.5.0",
     "nanostores": "^0.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
