--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/react": "^4.2.7",
     "@astrojs/svelte": "^7.0.13",
     "@nanostores/persistent": "^0.10.2",
+    "@nanostores/react": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.2.2",
