--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/node": "^9.2.1",
     "@astrojs/react": "^4.2.7",
     "@astrojs/svelte": "^7.0.13",
+    "@fontsource/ubuntu": "^5.2.6",
+    "@fontsource/ubuntu-mono": "^5.2.6",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.6",
