--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/node": "^9.2.1",
     "@astrojs/react": "^4.2.7",
     "@astrojs/svelte": "^7.0.13",
+    "@fontsource-variable/ubuntu-sans": "^5.2.8",
+    "@fontsource-variable/ubuntu-sans-mono": "^5.2.8",
     "@fontsource/ubuntu": "^5.2.6",
     "@fontsource/ubuntu-mono": "^5.2.6",
     "@nanostores/persistent": "^0.10.2",
@@ -34,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
+    "framer-motion": "^12.6.0",
     "lucide-react": "^0.482.0",
     "lz-string": "^1.5.0",
     "nanostores": "^0.11.3",
@@ -42,6 +45,7 @@
     "svelte": "^5.20.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
+    "three": "^0.167.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
