--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "@astrojs/node": "^9.5.2",
     "@astrojs/react": "^4.4.2",
     "@astrojs/svelte": "^7.2.5",
-    "@fontsource-variable/ubuntu-sans": "^5.2.10",
-    "@fontsource-variable/ubuntu-sans-mono": "^5.2.10",
-    "@fontsource/ubuntu": "^5.2.8",
-    "@fontsource/ubuntu-mono": "^5.2.8",
+    "@fontsource/space-mono": "^5.2.9",
     "@nanostores/persistent": "^1.3.3",
     "@nanostores/react": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
